--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "antd": "^5.25.2",
+    "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
