--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "antd": "^5.25.2",
+    "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
     "moment": "^2.30.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
