--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@apollo/client": "^3.13.8",
     "antd": "^5.25.2",
     "apollo-upload-client": "^18.0.1",
