--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
     "graphql": "^16.11.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
@@ -26,6 +29,7 @@
     "@eslint/js": "^9.25.0",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^22.15.21",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
