--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ant-design/charts": "^2.3.0",
     "@apollo/client": "^3.13.8",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "antd": "^5.25.2",
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
